Fixed icon align

--- a/css/app.css
+++ b/css/app.css
@@ -294,6 +294,7 @@ a {
     font-size: 1rem;
     width: 1.125rem;
     height: 1.125rem;
+    line-height: 1.125rem;
 }
 
 button.tts {
